...
    <string name="season">2020–2021</string>
    <string name="venue">Stadium</string>
    <string name="prev_match">LAST MATCH</string>
    <string name="next_match">NEXT MATCH</string>
    <string name="match">MATCH</string>
    <string name="standing">STANDING</string>
    <string name="teams">TEAMS</string>
    <string name="search_hint">Search Match or Teams</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="no_data">No Data Found</string>
    <string name="no_match_saved">No Match Saved</string>
    <string name="no_team_saved">No Team Saved</string>
    <string name="add_fav">Added to Favorite</string>
...
